<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/rectangie"
    android:orientation="vertical"
    android:layoutAnimation="@anim/layout_animation">


    <EditText
        android:id="@+id/editTextCryptTwo"
        android:hint="@string/instruction5"
        android:gravity="center"
        style="@style/e_Text" />

    <Button
        android:id="@+id/buttonDeCrypt"
        android:text="@string/buttonDeCrypt"
        style="@style/bButton" />

    <TextView
        android:id="@+id/editTextDeCrypt"
        android:gravity="center"
        style="@style/e_Text" />

    <Button
        android:id="@+id/buttonDeleteAllTwo"
        android:text="@string/buttonDeleteAll"
        style="@style/bButton" />

    <Button
        android:id="@+id/buttonGoCrypt"
        android:text="@string/instruction4"
        style="@style/bButton" />

</LinearLayout>